// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity property has invalid identifier of domain entity in dependency namespace should have validation failure for property 1`] = `"Domain entity property 'NotValid' does not match any declared Domain Entity or Domain Entity Subclass in namespace Extension."`;

exports[`when domain entity property has invalid identifier of domain entity in dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 4,
  "line": 15,
  "tokenText": "domain entity",
}
`;

exports[`when domain entity property has invalid identifier should have validation failure for property 1`] = `"Domain entity property 'UndefinedEntityName' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity property has invalid identifier should have validation failure for property 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: message 0 1`] = `"Domain entity property 'UndefinedEntityName1' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: message 0 2`] = `"Domain entity property 'UndefinedEntityName2' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: sourceMap 0 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: sourceMap 0 2`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "domain entity",
}
`;

exports[`when domain entity property refers to domain entity in non-dependency namespace should have validation failure for property 1`] = `"Domain entity property 'ExtensionEntityB' does not match any declared Domain Entity or Domain Entity Subclass in namespace Extensiona."`;

exports[`when domain entity property refers to domain entity in non-dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 4,
  "line": 14,
  "tokenText": "domain entity",
}
`;
